Working on thread synchronization - Peterson's algorithm for 2 threads

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,7 @@ project(OS)
 set(CMAKE_CXX_STANDARD 14)
 #set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "..")
 
-add_executable(OS main.cpp)
+add_executable(OS main.cpp
+    priority_boost_win.cpp
+    robin_round.cpp
+    thread_synchronization.cpp)
