--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,4 +8,5 @@ add_executable(OS main.cpp
     priority_boost_win.cpp
     robin_round.cpp
     thread_synchronization.cpp
-    mapping_vAddr_to_phAddr_x86.cpp)
+    mapping_vAddr_to_phAddr_x86.cpp
+    rmw_register.cpp)
