Reading the ELF header info (the address of entry point and the total size of memory required to load the program)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,4 +10,5 @@ add_executable(OS main.cpp
     thread_synchronization.cpp
     mapping_vAddr_to_phAddr_x86.cpp
     rmw_register.cpp
-    rwm_locks.cpp)
+    rwm_locks.cpp
+    read_elf.cpp)
